--- a/ur10e_mod_interfaces/package.xml
+++ b/ur10e_mod_interfaces/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>ur10e_mod_interfaces</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
-  <license>TODO: License declaration</license>
+  <description>Custom interfaces for the ur10e modified robotic arm</description>
+  <maintainer email="241abhishek@gmail.com">ubuntu</maintainer>
+  <license>Apache License 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>geometry_msgs</depend>
