--- a/ur10e_mod_moveit_config/config/pilz_industrial_motion_planner_planning.yaml
+++ b/ur10e_mod_moveit_config/config/pilz_industrial_motion_planner_planning.yaml
@@ -5,8 +5,10 @@ request_adapters:
   - default_planning_request_adapters/ValidateWorkspaceBounds
   - default_planning_request_adapters/CheckStartStateBounds
   - default_planning_request_adapters/CheckStartStateCollision
+response_adapters:
+  - default_planning_response_adapters/DisplayMotionPath
 
-default_planner_config: PTP
+default_planner_config: LIN
 capabilities: >-
     pilz_industrial_motion_planner/MoveGroupSequenceAction
     pilz_industrial_motion_planner/MoveGroupSequenceService
